--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 02 - Global plastic waste"
-author: "Team Name: User1, User2, User3, User4"
+author: "Team Name: ME1, ME2, ME3, ME4"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -17,11 +17,16 @@ library(readxl)
 
 ```{r load-data, message = FALSE}
 # Member 2 (pair 1) write code to load File 1 data here:
-
+data1 <- read_csv("data/mismanaged-plastic-waste-per-capita.csv")
+plastic_data_all <- data1
+plastic_data_all %>% head(n = 10)
 
 
 # Member 4 (pair 2) write code to load File 2 data here:
-
+data2 <- read_csv2("data/per-capita-ocean-plastic-waste.txt")
+plastic_data_all <- data2 %>%
+  select(-name) %>%
+  left_join(plastic_data_all, by = "code")
 
 
 # Member 1 (pair 1) write code to load File 3 data here:
